@@ -2,10 +2,7 @@ import java.io.FileInputStream
 import java.util.Properties
 
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.jetbrains.kotlin)
-    alias(libs.plugins.kotlin.ksp)
-    alias(libs.plugins.compose)
+    alias(libs.plugins.gamedeals.android.application)
     alias(libs.plugins.hilt)
     alias(libs.plugins.google.services)
     alias(libs.plugins.firebase.crashlytics)
@@ -13,8 +10,6 @@ plugins {
 
 android {
     namespace = "pm.bam.gamedeals"
-    compileSdk = 36
-
 
     // START - RELEASE SIGNING CONFIGURATION
     // Create variables to store the release key information
@@ -63,7 +58,6 @@ android {
 
     defaultConfig {
         applicationId = "pm.bam.gamedeals"
-        minSdk = 26
         targetSdk = 34
         versionCode = 9
         versionName = "1.0.6"
@@ -81,33 +75,6 @@ android {
 
             signingConfig = signingConfigs.getByName(releaseSigningKey)
         }
-    }
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_21
-        targetCompatibility = JavaVersion.VERSION_21
-    }
-    kotlin {
-        jvmToolchain(21)
-    }
-    buildFeatures {
-        compose = true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.11"
-    }
-    packaging {
-        resources {
-
-            excludes += "/META-INF/LICENSE.md"
-            excludes += "/META-INF/LICENSE-notice.md"
-            excludes += "/META-INF/{AL2.0,LGPL2.1}"
-
-            // Temporary fix for OSGi issue org.jspecify:jspecify:1.0.0 and com.squareup.okhttp3:logging-interceptor:5.2.1
-            excludes += "META-INF/versions/9/OSGI-INF/MANIFEST.MF"
-        }
-    }
-    tasks.withType<Test> {
-        jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
     }
 }
 
